[tool.poetry]
name = "pinboard-to-sqlite"
version = "1.2.2"
description = "Save data from Pinboard to a SQLite database"
authors = ["Jacob Kaplan-Moss <jacob@jacobian.org>"]
license = "wtfpl"
readme = "README.md"
repository = "https://github.com/jacobian/pinboard-to-sqlite/"

[tool.poetry.scripts]
pinboard-to-sqlite = "pinboard_to_sqlite.cli:cli"

[tool.poetry.dependencies]
python = "^3.10"
sqlite-utils = "^3.30"
requests = "^2.28.2"
click = "^8.0"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry>=1.4.2"]
build-backend = "poetry.masonry.api"
